--- a/index.html
+++ b/index.html
@@ -14,28 +14,28 @@
         </section>
         <section class="tools-board">
             <div class="row">
-                <label class="title">Shakllar</label>
+                <label class="title">Forms</label>
                 <ul class="options">
                     <li class="option tool" id="rectangle">
                         <img src="icons/rectangle.svg" alt="rectangle">
-                        <span>To'rtburchak</span>
+                        <span>Rectangle</span>
                     </li>
                     <li class="option tool" id="circle">
                         <img src="icons/circle.svg" alt="circle">
-                        <span>Doira</span>
+                        <span>Circle</span>
                     </li>
                     <li class="option tool" id="triangle">
                         <img src="icons/triangle.svg" alt="triangle">
-                        <span>Uchburchak</span>
+                        <span>Triangle</span>
                     </li>
                     <li class="option">
                         <input type="checkbox" id="fill-color">
-                        <label for="fill-color">Rangni to'ldirish</label>
+                        <label for="fill-color">Fill color</label>
                     </li>
                 </ul>
             </div>
             <div class="row">
-                <label class="title">Variantlar</label>
+                <label class="title">Tools</label>
                 <ul class="options">
                     <li class="option tool active" id="brush">
                         <img src="icons/brush.svg" alt="brush">
@@ -43,7 +43,7 @@
                     </li>
                     <li class="option tool" id="eraser">
                         <img src="icons/eraser.svg" alt="eraser">
-                        <span>O'chirg'ich</span>
+                        <span>Eraser</span>
                     </li>
                     <li class="option ">
                         <input type="range" id="size-slider" min="0" max="30" value="5">
@@ -51,7 +51,7 @@
                 </ul>
             </div>
             <div class="row colors">
-                <label class="title">Ranglar</label>
+                <label class="title">Colors</label>
                 <ul class="options">
                     <li class="option "></li>
                     <li class="option selected"></li>
@@ -63,8 +63,8 @@
                 </ul>
             </div>
             <div class="buttons row">
-                <button class="clear-canvas">O'chirish</button>
-                <button class="save-img">Saqlash</button>
+                <button class="clear-canvas">Delete</button>
+                <button class="save-img">Save</button>
             </div>
         </section>
     </div>
